tests/baselines/reference/parserFunctionDeclaration7.errors.txt
parserFunctionDeclaration7.ts(2,13): error TS2391: Function implementation is missing or not immediately following the declaration.


==== parserFunctionDeclaration7.ts (1 errors) ====
    module M {
       function foo();
                ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
    }